@@ -4,6 +4,8 @@ synaptic (0.75.13) UNRELEASED; urgency=low
     - use x-terminal-emulator -e synaptic-pkexec to support systems
       that do not have a GUI policykit agent running (closes: #678847)
   * include all origins in the origin filter not just the first one
+  * show all "archives" in the origins view even if they are "shadowed"
+    by another one
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 26 Jun 2012 12:31:38 +0200
 
